--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+output/Comparison of AWS CloudGuard Best Practices and AWS NIST 800-53 Rev 5.txt
+output/Comparison of AWS HITRUST and AWS NIST 800-53 Rev 5.txt
+output/Comparison of AWS NIST 800-53 Rev 4 and AWS NIST 800-53 Rev 5.txt
+output/Comparison of AWS NIST 800-53 Rev 5 and AWS CIS Foundations v. 1.4.0.txt
